@@ -1,3 +1,7 @@
+Mon Apr 06 14:34:22 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
+    
+    * flax/searchserver/schema.py: Added skeletal schema class.
+
 Wed Apr 01 14:19:07 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* docs/api.rst: Simplified field schema spec.
